--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ osx_image: xcode11.1 #2
 xcode_project: WhoIsAliveFromRickAndMorty.xcodeproj #3
 xcode_scheme: WhoIsAliveFromRickAndMorty #4
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X #5
+cache: cocoapods
