--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,50 +1,32 @@
-disabled_rules: # rule identifiers to exclude from running
-  - colon
-  - comma
-  - control_statement
-opt_in_rules: # some rules are only opt-in
+# Disable rules from the default enabled set
+disabled_rules:
+  - closure_parameter_position
+  - trailing_newline
+  - unneeded_break_in_switch
+  - void_return
+  - identifier_name
+
+# Enable rules not from the default set
+opt_in_rules:
+  - closure_end_indentation
+  - collection_alignment
+  - conditional_returns_on_newline
   - empty_count
-  # Find all the available rules by running:
-  # swiftlint rules
-included: # paths to include during linting. `--path` is ignored if present.
-  - SourceProject
-excluded: # paths to ignore during linting. Takes precedence over `included`.
-  - Carthage
-  - Pods
-  - Source/ExcludedFolder
-  - Source/ExcludedFile.swift
-  - Source/*/ExcludedFile.swift # Exclude files with a wildcard
-analyzer_rules: # Rules run by `swiftlint analyze` (experimental)
+  - empty_string
   - explicit_self
-# configurable rules can be customized from this configuration file
-# binary rules can set their severity level
-force_cast: warning # implicitly
-force_try:
-  severity: warning # explicitly
-# rules that have both warning and error levels, can set just the warning level
-# implicitly
-line_length: 110
-# they can set both implicitly with an array
-type_body_length:
-  - 300 # warning
-  - 400 # error
-# or they can set both explicitly
-file_length:
-  warning: 500
-  error: 1200
-# naming rules can set warnings/errors for min_length and max_length
-# additionally they can set excluded names
-type_name:
-  min_length: 4 # only warning
-  max_length: # warning and error
-    warning: 40
-    error: 50
-  excluded: iPhone # excluded via string
-identifier_name:
-  min_length: # only min_length
-    error: 4 # only error
-  excluded: # excluded via string array
-    - id
-    - URL
-    - GlobalAPIKey
-reporter: "xcode" # reporter type (xcode, json, csv, checkstyle, junit, html, emoji, sonarqube, markdown)
+  - fatal_error_message
+  - file_types_order
+  - first_where
+  - last_where
+  - force_unwrapping
+  - missing_docs
+  - multiline_arguments
+  - operator_usage_whitespace
+
+line_length:
+  ignores_function_declarations: true
+  ignores_urls: true
+
+# Paths to ignore during linting
+excluded:
+  - Pods
