--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-language: objective-c #1
-osx_image: xcode11.1 #2
-xcode_project: WhoIsAliveFromRickAndMorty.xcodeproj #3
-xcode_scheme: WhoIsAliveFromRickAndMorty #4
-xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X #5
-cache: cocoapods
-before_install:
-    - brew install swiftlint
+language: objective-c
+osx_image: xcode11.1
+xcode_project: WhoIsAliveFromRickAndMorty.xcodeproj
+xcode_scheme: WhoIsAliveFromRickAndMorty
+xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
+
