--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: objective-c
+os: osx
 osx_image: xcode11.1
-script:
-- set -o pipefail
 xcode_project: WhoIsAliveFromRickAndMorty.xcodeproj
 xcode_scheme: WhoIsAliveFromRickAndMorty
 xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
-
