add update to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ os: osx
 osx_image: xcode11.1
 xcode_project: WhoIsAliveFromRickAndMorty.xcodeproj
 xcode_scheme: WhoIsAliveFromRickAndMorty
-xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
+xcode_destination: platform=iOS Simulator,OS=13.1,name=iPhone 11
